# rubik

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  actions.cpp  compact_state.cpp  permutation_state.cpp  printer.cpp  thistlethwaite.cpp
src/include/: actions.h  compact_state.h  permutation_state.h  rubik.h  thistlethwaite.h
tests/: CMakeLists.txt  key1.cpp  key2.cpp  key3.cpp  key4.cpp  solve.cpp  state1.cpp  state2.cpp
